# motion_planning

grid_path_searcher/: CMakeLists.txt
grid_path_searcher/include/: astar.h  grid_map.h  kinodynamic_astar.h
grid_path_searcher/launch/: demo.launch
grid_path_searcher/launch/rviz_config/: demo.rviz
grid_path_searcher/src/: astar.cpp  demo_node.cpp  grid_map.cpp  kinodynamic_astar.cpp
map_generator/: CMakeLists.txt  package.xml
map_generator/src/: random_complex_generator.cpp
trajectory_generator/: CMakeLists.txt  package.xml
trajectory_generator/include/: minimum_control.h
trajectory_generator/launch/: test.launch
trajectory_generator/launch/rviz_config/: test_traj.rviz
trajectory_generator/src/: minimum_control.cpp  trajectory_generator_node.cpp
waypoint_generator/src/: waypoint_generator.cpp
